# fiksi

./: AUTHORS  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
colamd_rs/: Cargo.toml  README.md
colamd_rs/src/: colamd.rs  floatfuncs.rs  lib.rs  options.rs  status.rs
examples/fiksi_svg_tests/: Cargo.toml
examples/fiksi_svg_tests/src/: main.rs
examples/fiksi_toy/: Cargo.toml
examples/fiksi_toy/src/: main.rs
fiksi/: CHANGELOG.md  Cargo.toml  README.md
fiksi/benches/: fiksi_bench.rs
fiksi/src/: collections.rs  floatfuncs.rs  graph.rs  lib.rs  rand.rs  subsystem.rs  utils.rs  variable_map.rs  vocabulary.rs
fiksi/src/analyze/: mod.rs
fiksi/src/analyze/graph/: equations.rs  mod.rs  recursive_assembly.rs
fiksi/src/analyze/numerical/: mod.rs
fiksi/src/assemble/: mod.rs
fiksi/src/constraints/: expressions.rs  mod.rs
fiksi/src/elements/: mod.rs
fiksi/src/manual/: mod.rs
fiksi/src/solve/: lbfgs.rs  lm.rs  mod.rs
fiksi/src/tests/: basic.rs  fixed.rs  magnitude.rs  mod.rs  sets.rs  singular.rs  triangles.rs
fiksi_svg/: Cargo.toml
fiksi_svg/src/: lib.rs
solvi/: Cargo.toml  README.md
solvi/src/: coo_mat.rs  floatfuncs.rs  lib.rs  permutation.rs  sparse_col_mat.rs  triplet.rs  triplet_mat.rs  utils.rs
solvi/src/decomposition/: mod.rs
solvi/src/decomposition/sparse/: cholesky.rs  mod.rs  qr.rs
