[package]
name = "colamd_rs"
license = "BSD-3-Clause"
edition.workspace = true
description = "Column approximate minimum degree"
keywords = ["math", "sparse", "linear", "algebra", "matrix"]
categories = ["science", "mathematics"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = []

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }

[dependencies.libm]
version = "0.2.15"
optional = true
