[package]
name = "fiksi"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A geometric and parametic constraint solver."
keywords = ["constraint", "solver"]
categories = ["graphics"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["kurbo/std"]
libm = ["dep:libm", "kurbo/libm"]

[dependencies]
kurbo = { version = "0.11.2", default-features = false }

# Temporarily included
nalgebra = { version = "0.33.2" }

[dependencies.libm]
version = "0.2.15"
optional = true

[lints]
workspace = true
