[package]
name = "fiksi"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A geometric and parametic constraint solver."
keywords = ["constraint", "solver"]
categories = ["graphics"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["kurbo/std", "nalgebra/std"]
libm = ["dep:libm", "kurbo/libm", "nalgebra/libm"]

[dependencies]
hashbrown = { version = "0.15.5", default-features = false, features = ["default-hasher"] }
indexmap = { version = "2.10.0", default-features = false }
kurbo = { version = "0.11.2", default-features = false }

# Temporarily included
nalgebra = { version = "0.33.2", default-features = false, features = ["alloc"] }

[dependencies.libm]
version = "0.2.15"
optional = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fiksi_bench"
harness = false

[lints]
workspace = true
