[package]
name = "fiksi_toy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
tracing-tracy = ["dep:tracing-tracy", "dep:tracy-client"]
tracing-tracy-memory = ["tracing-tracy"]

[dependencies]
anyhow = "1.0.93"
pollster = "0.4.0"
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
tracing.workspace = true
tracy-client = { workspace = true, optional = true }
vello = "0.6.0"
winit = "0.30.10"

fiksi = { workspace = true, features = ["std"] }

[lints]
workspace = true
